--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 /subprojects/docs/src/samples/*/*/build
 /subprojects/internal-android-performance-testing/build-android-libs
 
+# Android
+local.properties
+
+
 # IDEA
 # ----
 .idea
