--- a/krymon-backend/build.gradle
+++ b/krymon-backend/build.gradle
@@ -13,12 +13,10 @@ repositories {
 }
 
 dependencies {
+    compile project(path: ':krymon-model')
     compile 'io.vertx:vertx-core:3.5.0'
     compile 'io.vertx:vertx-web:3.5.0'
-    compile 'joda-time:joda-time:2.9.9'
     compile 'io.reactivex:rxjava:1.3.5'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.9.4'
-
     testCompile 'io.vertx:vertx-unit:3.5.0'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'junit:junit:4.12'
 }
