Added shadowJar plugin for backend.

--- a/krymon-backend/build.gradle
+++ b/krymon-backend/build.gradle
@@ -1,6 +1,7 @@
 group 'net.antonha'
 version '1.0-SNAPSHOT'
 
+apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
 apply plugin: 'application'
 
