--- a/krymon-app/src/main/AndroidManifest.xml
+++ b/krymon-app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity
                 android:name=".ListServicesActivity"
-                android:label="@string/title_activity_list_services"
+                android:label="Services"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
